# MedLib-Viewer

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.coolify.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8a7b6c5d4e3f_make_category_department_id_nullable.py  9f4c2a1b7d6e_add_article_media_type.py  c25821eeb357_initial_schema.py
backend/app/: bootstrap.py  config.py  main.py  metadata.py  models.py  ocr.py  schemas.py  security.py
backend/app/routers/: annotations.py  auth.py  books.py  dashboard.py  taxonomy.py  workspace.py
deploy/coolify/: docker-compose.coolify.yml  env.coolify.example
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
